dylo-cli/src/snapshots/dylo__dependency__tests__cargo_toml_after_add.snap
---
source: dylo-cli/src/dependency.rs
expression: final_content
snapshot_kind: text
---
[package]
name = "mod-test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dylo = "1.0.0"
serde = "1.0.218"
tokio = { version = "1.43.0", optional = true }

[features]
default = []
impl = ["dep:tokio"]
